# MooreCoinMiningAlgorithm

./: .gitignore  .travis.yml  COPYING  INSTALL  Makefile.am  autogen.sh  configure.ac  libmoorecoinconsensus.pc.in
src/: .clang-format  Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_read.cpp  core_write.cpp  eccryptoverify.cpp  eccryptoverify.h  (+82 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/leveldb/: .gitignore  CONTRIBUTING.md  Makefile  README.md  build_detect_platform
src/leveldb/db/: autocompact_test.cc  corruption_test.cc  db_bench.cc  db_impl.cc  db_impl.h  db_test.cc  dbformat.h  dumpfile.cc  leveldb_main.cc  log_format.h  log_reader.cc  log_reader.h  log_test.cc  repair.cc  skiplist.h  version_set.cc  version_set.h  write_batch_internal.h
src/leveldb/doc/: impl.html  log_format.txt
src/leveldb/issues/: issue178_test.cc  issue200_test.cc
src/leveldb/port/: atomic_pointer.h  port_posix.h  port_win.h  thread_annotations.h
src/leveldb/table/: block.cc  block_builder.h  filter_block_test.cc  format.cc  table.cc
src/leveldb/util/: arena.h  arena_test.cc  bloom.cc  bloom_test.cc  coding_test.cc  comparator.cc  env_posix.cc  hash.cc  hash_test.cc  logging.cc  logging.h  testharness.cc  testutil.cc  testutil.h
src/policy/: fees.cpp  fees.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  moorecoin.cpp  moorecoin.qrc  moorecoin_locale.qrc  moorecoinaddressvalidator.cpp  moorecoinaddressvalidator.h  moorecoinamountfield.cpp  moorecoinamountfield.h  moorecoingui.cpp  moorecoingui.h  moorecoinstrings.cpp  moorecoinunits.cpp  moorecoinunits.h  networkstyle.cpp  networkstyle.h  notificator.cpp  (+64 more)
src/qt/forms/: addressbookpage.ui  askpassphrasedialog.ui  coincontroldialog.ui  editaddressdialog.ui  helpmessagedialog.ui  intro.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  receiverequestdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  transactiondescdialog.ui
src/qt/locale/: moorecoin_ach.ts  moorecoin_af_za.ts  moorecoin_ar.ts  moorecoin_be_by.ts  moorecoin_bg.ts  moorecoin_bs.ts  moorecoin_ca.ts  moorecoin_ca@valencia.ts  moorecoin_ca_es.ts  moorecoin_cmn.ts  moorecoin_cs.ts  moorecoin_cy.ts  moorecoin_da.ts  moorecoin_de.ts  moorecoin_el_gr.ts  moorecoin_en.ts  moorecoin_eo.ts  moorecoin_es.ts  moorecoin_es_cl.ts  moorecoin_es_do.ts  moorecoin_es_mx.ts  moorecoin_es_uy.ts  moorecoin_et.ts  moorecoin_eu_es.ts  moorecoin_fa.ts  moorecoin_fa_ir.ts  moorecoin_fi.ts  moorecoin_fr.ts  moorecoin_fr_ca.ts  moorecoin_gl.ts  moorecoin_gu_in.ts  moorecoin_he.ts  moorecoin_hi_in.ts  moorecoin_hr.ts  moorecoin_hu.ts  moorecoin_id_id.ts  moorecoin_it.ts  moorecoin_ja.ts  moorecoin_ka.ts  moorecoin_kk_kz.ts  (+31 more)
src/qt/res/: moorecoin-qt-res.rc
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: interpreter.cpp  interpreter.h  moorecoinconsensus.cpp  moorecoinconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: .gitignore  .travis.yml  COPYING  Makefile.am  README.md  TODO  configure.ac  libsecp256k1.pc.in
src/secp256k1/include/: secp256k1.h
src/secp256k1/src/: bench.h  bench_internal.c  bench_recover.c  bench_sign.c  bench_verify.c  ecdsa.h  ecdsa_impl.h  eckey.h  eckey_impl.h  ecmult.h  ecmult_gen.h  ecmult_gen_impl.h  ecmult_impl.h  field.h  field_10x26.h  field_10x26_impl.h  field_5x52.h  field_5x52_asm_impl.h  field_5x52_impl.h  field_5x52_int128_impl.h  field_impl.h  group.h  group_impl.h  hash.h  hash_impl.h  num.h  num_gmp.h  num_gmp_impl.h  num_impl.h  scalar.h  secp256k1.c  (+9 more)
src/support/: cleanse.cpp  cleanse.h  pagelocker.cpp  pagelocker.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bctest.py  bignum.h  bip32_tests.cpp  bloom_tests.cpp  buildenv.py.in  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  moorecoin-util-test.py  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  (+10 more)
src/univalue/: gen.cpp  univalue.cpp  univalue.h  univalue_escapes.h  univalue_read.cpp  univalue_write.cpp
src/wallet/: crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
(+222 files in other folders)
